# Databricks_MLOps

./: .gitignore  README.md  databricks.yml  project_config_credit_risk.yml  pyproject.toml
.github/workflows/: ci.yml
data/: german_credit_data.csv
databricks_notebooks/: credit_risk_feature_engineering.py  credit_risk_ml_model_development.py  deploy_model.py  eda.ipynb  eda.py  extract_data.py  test_notebook.py  train_register_baseline_model.py  train_register_custom_model.py  tune_custom_model.py
notebooks/: extract_data.py  test_notebook.py
resources/: data_extraction.yml  model_deployment.yml
scripts/: deploy_model.py  extract_data.py  train_register_baseline_model.py  train_register_custom_model.py  tune_custom_model.py
src/credit_risk/: __init__.py  basic_model.py  config.py  data_extractor.py
src/credit_risk/endpoint_deployments/: __init__.py  model_serving.py
src/credit_risk/models/: __init__.py  model.py  model_wrapper.py
tests/: __init__.py
tests/credit_risk/: __init__.py  test_data_extractor.py  test_model.py
